Fix: `ImageFullView` too big area mouse catching

--- a/frontend/src/app/main/components/image/image.component.scss
+++ b/frontend/src/app/main/components/image/image.component.scss
@@ -3,3 +3,10 @@
   max-width: 480px;
 }
 
+.enlarged-image {
+  pointer-events: all;
+}
+
+.modal-full-image {
+  pointer-events: none;
+}
